@@ -3,6 +3,7 @@
     * Add Net::SSLeay::BIO#new_file method.
     * Add Net::SSLeay::DH class.
     * Add Net::SSLeay::PEM#read_bio_DHparams method.
+    * Add Net::SSLeay#get_servername method.
 0.009 2024-11-08
   [Requirement Changes]
     * Require SPVM 0.990029.
